--- a/alcs-frontend/src/app/shared/header/header.component.scss
+++ b/alcs-frontend/src/app/shared/header/header.component.scss
@@ -1,5 +1,47 @@
-header {
-  margin: 12px;
+.menu-items-container {
+  width: 100%;
+  .menu-item:hover {
+    background: rgb(244, 238, 238);
+    border-radius: 8px;
+  }
+}
+
+.menu-item {
+  border: none;
+  background: inherit;
+  cursor: pointer;
+}
+
+.logo {
+  display: inline-block;
+  position: fixed;
+  top:0;
+  left: 10px;
+  width: 100px;
+
+  image {
+    width: 100%;
+    height: 100%;
+  }
+}
+
+.flex-grid {
+  display: flex;
+}
+.flex-grid .col {
+  flex: 1;
+}
+.flex-grid-thirds {
   display: flex;
   justify-content: space-between;
+}
+
+.flex-grid-thirds .col {
+  width: 100%;
+}
+
+.right {
+  display: flex;
+  align-items: right;
+  justify-content: right;
 }
