--- a/alcs-frontend/src/app/shared/header/header.component.html
+++ b/alcs-frontend/src/app/shared/header/header.component.html
@@ -1,5 +1,5 @@
 <header>
-  <div class="flex-grid-thirds">
+  <div class="flex-grid">
     <mat-toolbar>
       <div class="col">
         <a class="logo" href="{{ homeUrl }}">
