Add Assigned to Me on Home Page
* Refactor Home to its own lazy loaded module
* Change board from /admin to /board
* Update colors to match new spec from UX
* Remove decisionMaker being optional on application for now

--- a/alcs-frontend/src/styles/colors.scss
+++ b/alcs-frontend/src/styles/colors.scss
@@ -1,8 +1,9 @@
-$primary-color: #98b057;
-$accent-color: #0a5a9c;
-$black: #333333;
+$primary-color: #065a2f;
+$secondary-color: #fcba19;
+$accent-color: #003366;
+$black: #313132;
 $white: #ffffff;
-$grey: #bcbcbc;
+$grey: #929292;
 $link-color: #1c3f94;
 
 $bg-color: #f5f7e7;
