--- a/alcs-frontend/src/app/shared/header/header.component.scss
+++ b/alcs-frontend/src/app/shared/header/header.component.scss
@@ -12,6 +12,11 @@
   cursor: pointer;
 }
 
+button.mat-menu-item {
+  width: auto;
+  display: inline-block
+}
+
 .logo {
   display: inline-block;
   position: fixed;
@@ -37,4 +42,12 @@
   display: flex;
   align-items: right;
   justify-content: right;
+}
+
+.grey-star {
+  color: lightgrey
+}
+
+.gold-star {
+  color: gold
 }
