Add Application Module
* Add new application module
* Add navigation and sub routing for child components
* Add logic to store target url and re-load upon successful login
* Setup app layout

--- a/alcs-frontend/src/app/features/board/card-detail-dialog/card-detail-dialog.component.html
+++ b/alcs-frontend/src/app/features/board/card-detail-dialog/card-detail-dialog.component.html
@@ -1,6 +1,8 @@
 <div mat-dialog-title class="header">
   <div>
-    <h2 class="card-title">{{ currentCard.fileNumber }} ({{ currentCard.applicant }})</h2>
+    <a href="application/{{currentCard.fileNumber}}" target="_blank" rel="noreferrer">
+      <h2 class="card-title">{{ currentCard.fileNumber }} ({{ currentCard.applicant }})</h2>
+    </a>
     <span>
       in <span class="italic card-status-label">{{ currentCard.statusDetails.label }}</span>
     </span>
