--- a/alcs-frontend/src/app/shared/header/header.component.html
+++ b/alcs-frontend/src/app/shared/header/header.component.html
@@ -1,20 +1,20 @@
-<header>
+<header style="border-bottom: 1px solid">
   <div class="flex-grid">
     <mat-toolbar>
       <div class="col">
-        <a class="logo" href="{{ homeUrl }}">
+        <a class="logo" [routerLink]="homeUrl">
           <img alt="ALCS - Permit Tracking System" src="/assets/images/ALC-logo.svg" />
         </a>
       </div>
       <div class="col right">
         <div>
-          <a href="{{ homeUrl }}">
+          <a [routerLink]="homeUrl">
             <button class="menu-item">Home</button>
           </a>
         </div>
       </div>
       <div class="col">
-        <button class="menu-item" [matMenuTriggerFor]="menu">Board</button>
+        <button class="menu-item" [matMenuTriggerFor]="menu">Boards ▾</button>
         <mat-menu #menu="matMenu">
           <button mat-menu-item *ngFor="let dm of decisionMakers" [value]="dm.code" (click)="onSelectBoard($event)">
             {{ dm.label }}
