--- a/alcs-frontend/src/app/app.component.html
+++ b/alcs-frontend/src/app/app.component.html
@@ -1,3 +1,7 @@
-<app-header></app-header>
-<router-outlet></router-outlet>
-<app-footer></app-footer>
+<div class="site-layout">
+  <app-header></app-header>
+  <div class="main-content">
+    <router-outlet></router-outlet>
+  </div>
+  <app-footer></app-footer>
+</div>
