--- a/alcs-frontend/src/app/app.component.scss
+++ b/alcs-frontend/src/app/app.component.scss
@@ -2,3 +2,19 @@
   width: 100%;
   height: 100%;
 }
+
+.site-layout {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+
+  div {
+    flex-grow: 0;
+  }
+
+  div.main-content {
+    flex-grow: 1;
+  }
+}
+
+
