--- a/alcs-frontend/src/app/shared/footer/footer.component.scss
+++ b/alcs-frontend/src/app/shared/footer/footer.component.scss
@@ -1,3 +1,8 @@
 footer {
-  margin: 12px;
+  padding: 12px;
+  height: 50px;
+  display: flex;
+  align-items: center;
+  border-top: 1px solid;
+  background-color: whitesmoke;
 }
