--- a/alcs-frontend/src/app/shared/header/header.component.scss
+++ b/alcs-frontend/src/app/shared/header/header.component.scss
@@ -14,12 +14,10 @@
 
 .logo {
   display: inline-block;
-  position: fixed;
-  top:0;
-  left: 10px;
   width: 100px;
+  padding: 10px 4px 4px 4px;
 
-  image {
+  img {
     width: 100%;
     height: 100%;
   }
