--- a/alcs-frontend/src/app/shared/header/header.component.scss
+++ b/alcs-frontend/src/app/shared/header/header.component.scss
@@ -1,11 +1,3 @@
-.menu-items-container {
-  width: 100%;
-  .menu-item:hover {
-    background: rgb(244, 238, 238);
-    border-radius: 8px;
-  }
-}
-
 .menu-item {
   border: none;
   background: inherit;
@@ -15,6 +7,10 @@
 button.mat-menu-item {
   width: auto;
   display: inline-block
+}
+
+button.mat-menu-item {
+  padding-left: 0px !important;
 }
 
 .logo {
@@ -29,6 +25,7 @@ button.mat-menu-item {
     height: 100%;
   }
 }
+
 .flex-grid {
   display: flex;
   justify-content: space-between;
@@ -55,6 +52,10 @@ button.mat-menu-item {
 
 .favorite-btn {
   visibility: hidden;
+  mat-icon {
+    padding-bottom: 5px ;
+  }
+  
 }
 
 .board-item .favorite-btn {
