--- a/alcs-frontend/src/app/shared/header/header.component.html
+++ b/alcs-frontend/src/app/shared/header/header.component.html
@@ -8,7 +8,7 @@
       </div>
       <div class="col right">
         <div>
-          <a [routerLink]="homeUrl"">
+          <a [routerLink]="homeUrl">
             <button class="menu-item">Home</button>
           </a>
         </div>
