--- a/alcs-frontend/src/app/shared/header/header.component.html
+++ b/alcs-frontend/src/app/shared/header/header.component.html
@@ -17,13 +17,11 @@
         <button class="menu-item" [matMenuTriggerFor]="menu">Boards ▾</button>
         <mat-menu #menu="matMenu">
           <div class="board-item menu-item" *ngFor="let dm of sortedDecisionMakers" (click)="onSelectBoard(dm.code)">
-            <button
-              [ngClass]="{ gold: dm.isFavorite, 'favorite-btn': true }"
-              mat-icon-button
-              (click)="onFavoriteClicked($event, dm)"
-            >
-              <mat-icon>star</mat-icon>
-            </button>
+            <app-favorite-button
+              [dmCode]="dm.code"
+              [isFavorite]="dm.isFavorite"
+              [currentUserProfile]="currentUserProfile"
+            ></app-favorite-button>
             <button mat-menu-item>
               {{ dm.label }}
             </button>
