--- a/alcs-frontend/src/styles/typography.scss
+++ b/alcs-frontend/src/styles/typography.scss
@@ -33,6 +33,14 @@ h5 {
   @include typography-style(20px, 700);
 }
 
+.subheading1 {
+  @include typography-style(18px, 700);
+}
+
+.subheading2 {
+  @include typography-style(16px, 700);
+}
+
 a,
 p,
 .body1-text {
@@ -46,7 +54,7 @@ p,
 }
 
 .button-text {
-  @include typography-style(16px, 700);
+  @include typography-style(14px, 700);
   line-height: 24px;
   letter-spacing: 1px;
 }
