--- a/alcs-frontend/src/app/shared/header/header.component.html
+++ b/alcs-frontend/src/app/shared/header/header.component.html
@@ -16,9 +16,16 @@
       <div class="col">
         <button class="menu-item" [matMenuTriggerFor]="menu">Boards ▾</button>
         <mat-menu #menu="matMenu">
-          <button mat-menu-item *ngFor="let dm of decisionMakers" [value]="dm.code" (click)="onSelectBoard($event)">
-            {{ dm.label }}
-          </button>
+          <div class="board-item menu-item" *ngFor="let dm of sortedDecisionMakers" (click)="onSelectBoard(dm.code)">
+            <app-favorite-button
+              [dmCode]="dm.code"
+              [isFavorite]="dm.isFavorite"
+              [currentUserProfile]="currentUserProfile" 
+            ></app-favorite-button>
+            <button mat-menu-item>
+              {{ dm.label }}
+            </button>
+          </div>
         </mat-menu>
       </div>
       <div class="col right">
