--- a/alcs-frontend/src/app/shared/header/header.component.scss
+++ b/alcs-frontend/src/app/shared/header/header.component.scss
@@ -1,15 +1,19 @@
-.menu-items-container {
-  width: 100%;
-  .menu-item:hover {
-    background: rgb(244, 238, 238);
-    border-radius: 8px;
-  }
-}
+@import '../../../styles/colors';
 
 .menu-item {
   border: none;
   background: inherit;
   cursor: pointer;
+}
+
+button.mat-menu-item {
+  width: auto;
+  display: inline-block;
+  padding-left: 0px !important;
+}
+
+button.mat-menu-item:hover {
+  background-color: inherit;
 }
 
 .logo {
@@ -22,17 +26,39 @@
     height: 100%;
   }
 }
+
 .flex-grid {
   display: flex;
   justify-content: space-between;
-}
-
-.flex-grid .col {
-  width: 80%;
+ 
+  .col {
+    width: 80%;
+  }
 }
 
 .right {
   display: flex;
   align-items: right;
   justify-content: right;
+}
+
+div.board-item {
+  ::ng-deep .favorite-btn {
+    visibility: hidden;
+    color: $pending-star;
+    
+    mat-icon {
+      height: inherit;
+      position: relative;
+      top:4px;
+      margin: 0 2px 0 2px;
+    }
+  } 
+}
+
+.board-item:hover {
+  background-color: #f8f3f3;
+  ::ng-deep .favorite-btn  {
+    visibility: visible;
+  }
 }
