--- a/alcs-frontend/src/styles/colors.scss
+++ b/alcs-frontend/src/styles/colors.scss
@@ -14,3 +14,5 @@ $warning-color: #cc8b18;
 
 $dark-contrast-text: #000000;
 $light-contrast-text: $white;
+$favorite-star: #ffd700;
+$pending-star:#d3d3d3;
