Add role guard to ensure users have roles
* Prevent users from loading home/boards/applications if they don't have roles set
* Take users to /provision page if they have no roles
* Setup header to render minimally when user has no roles
* Remove noroles flag from backend as frontend now has the logic

--- a/alcs-frontend/src/app/shared/header/header.component.html
+++ b/alcs-frontend/src/app/shared/header/header.component.html
@@ -7,14 +7,14 @@
         </a>
       </div>
       <div class="col right">
-        <div>
+        <div *ngIf="currentUser">
           <a [routerLink]="homeUrl">
             <button class="menu-item">Home</button>
           </a>
         </div>
       </div>
       <div class="col">
-        <button class="menu-item" [matMenuTriggerFor]="menu">Boards ▾</button>
+        <button  *ngIf="currentUser" class="menu-item" [matMenuTriggerFor]="menu">Boards ▾</button>
         <mat-menu #menu="matMenu">
           <div class="board-item menu-item" *ngFor="let dm of sortedDecisionMakers" (click)="onSelectBoard(dm.code)">
             <app-favorite-button
