--- a/alcs-frontend/src/app/features/application/review/create-decision-meeting-dialog/create-decision-meeting-dialog.component.html
+++ b/alcs-frontend/src/app/features/application/review/create-decision-meeting-dialog/create-decision-meeting-dialog.component.html
@@ -3,30 +3,13 @@
 </div>
 <form [formGroup]="createForm" (ngSubmit)="onSubmit()">
   <mat-dialog-content style="height: 100%">
-    <div>
-      <label for="fileNumber">Date: </label>
-      <div>
-        <input
-          id="fileNumber"
-          formControlName="fileNumber"
-          type="number"
-          [class.valid]="
-            createForm.get('fileNumber')!.valid &&
-            (createForm.get('fileNumber')!.dirty || createForm.get('fileNumber')!.touched)
-          "
-          [class.invalid]="
-            createForm.get('fileNumber')!.invalid &&
-            (createForm.get('fileNumber')!.dirty || createForm.get('fileNumber')!.touched)
-          "
-        />
-        <small
-          class="text-danger"
-          *ngIf="createForm.get('fileNumber')!.touched && createForm.get('fileNumber')!.hasError('required')"
-        >
-          This field is required.
-        </small>
-      </div>
-    </div>
+    <mat-form-field appearance="fill">
+      <mat-label>Choose a date</mat-label>
+      <input matInput [matDatepicker]="pdd" formControlName="date" />
+      <mat-datepicker-toggle matSuffix [for]="pdd"></mat-datepicker-toggle>
+      <mat-datepicker #pdd type="date"> </mat-datepicker>
+      <mat-hint>{{ createForm.value.date | date: 'mediumDate' }}</mat-hint>
+    </mat-form-field>
   </mat-dialog-content>
   <mat-dialog-actions align="end">
     <div>
