link UI and API for application decision meeting

--- a/alcs-frontend/src/app/features/application/application.component.html
+++ b/alcs-frontend/src/app/features/application/application.component.html
@@ -5,7 +5,7 @@
   <div class="application">
     <h2>{{ application.fileNumber }} ({{ application.applicant }})</h2>
     <div class="child-content">
-      <router-outlet></router-outlet>
+      <router-outlet (activate)="onOutletLoaded($event)"></router-outlet>
     </div>
   </div>
 </div>
