--- a/alcs-frontend/src/app/features/application/review/decision-meeting/decision-meeting.component.html
+++ b/alcs-frontend/src/app/features/application/review/decision-meeting/decision-meeting.component.html
@@ -11,19 +11,19 @@
 
 <br />
 
-<table mat-table [dataSource]="dataSource" class="mat-elevation-z8 width-100">
+<table mat-table [dataSource]="decisionMeetings" class="mat-elevation-z8 width-100">
   <ng-container matColumnDef="date">
     <th mat-header-cell *matHeaderCellDef>Date</th>
-    <td mat-cell *matCellDef="let element">{{ element.date }}</td>
+    <td mat-cell *matCellDef="let element">{{ element.date | date: 'mediumDate' }}</td>
   </ng-container>
 
   <ng-container matColumnDef="action">
     <th mat-header-cell *matHeaderCellDef>User Action</th>
     <td mat-cell *matCellDef="let element">
-      <button mat-icon-button class="action-btn" (click)="onEdit()">
+      <button mat-icon-button class="action-btn" (click)="onEdit(element.uuid)">
         <mat-icon>edit</mat-icon>
       </button>
-      <button mat-icon-button class="action-btn delete" (click)="onDelete()">
+      <button mat-icon-button class="action-btn delete" (click)="onDelete(element.uuid)">
         <mat-icon>delete</mat-icon>
       </button>
     </td>
@@ -31,4 +31,7 @@
 
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
   <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+  <tr class="mat-row center" *matNoDataRow>
+    No data
+  </tr>
 </table>
