Remove decision maker and wire in boards
* Add migration to set all applications to vetting board and first status

--- a/alcs-frontend/src/app/features/board/board.component.html
+++ b/alcs-frontend/src/app/features/board/board.component.html
@@ -2,7 +2,7 @@
   <div style="display: flex; justify-content: space-between; margin: 12px 18px">
     <div>
       <h2 class="board-title">
-        <app-favorite-button [dmCode]="decisionMakerCode" [isFavorite]="boardIsFavorite"></app-favorite-button
+        <app-favorite-button [boardCode]="selectedBoardCode" [isFavorite]="boardIsFavourite"></app-favorite-button
         >{{ boardTitle }}
       </h2>
     </div>
