--- a/alcs-frontend/src/app/features/home/assigned/assigned.component.html
+++ b/alcs-frontend/src/app/features/home/assigned/assigned.component.html
@@ -12,7 +12,7 @@
         [ngClass]="{
           paused: application.paused
         }"
-        (click)="onSelectCard(application.fileNumber, application.decisionMaker)"
+        (click)="onSelectCard(application.fileNumber, application.board)"
         *ngFor="let application of applications"
       >
         <td class="center" style="padding: 4px">
