--- a/alcs-frontend/src/app/features/board/create-card-detail-dialog/create-card-dialog.component.html
+++ b/alcs-frontend/src/app/features/board/create-card-detail-dialog/create-card-dialog.component.html
@@ -4,7 +4,7 @@
 <form [formGroup]="createForm" (ngSubmit)="onSubmit()">
   <mat-dialog-content style="height: 100%">
     <div>
-      <label for="fileNumber">File number: </label>
+      <label for="fileNumber">File number: *</label>
       <div>
         <input
           id="fileNumber"
@@ -28,7 +28,7 @@
       </div>
     </div>
     <div>
-      <label for="applicant">Applicant: </label>
+      <label for="applicant">Applicant: *</label>
       <div>
         <input
           id="applicant"
@@ -64,6 +64,12 @@
       >
       </ng-select>
     </div>
+    <mat-form-field appearance="fill">
+      <mat-label>Date Submitted to ALC</mat-label>
+      <input matInput [matDatepicker]="pdd" formControlName="receivedDate" required />
+      <mat-datepicker-toggle matSuffix [for]="pdd"></mat-datepicker-toggle>
+      <mat-datepicker #pdd type="date"> </mat-datepicker>
+    </mat-form-field>
     <div>
       <ng-select
         class="card-region"
