--- a/alcs-frontend/src/app/shared/drag-drop-board/drag-drop-board.component.html
+++ b/alcs-frontend/src/app/shared/drag-drop-board/drag-drop-board.component.html
@@ -1,15 +1,14 @@
 <div>
   <div class="container" cdkDropListGroup>
     <div class="column" [id]="'column-' + column.status" *ngFor="let column of columns">
-      <div class="column-header">
-        {{ column.name }}
-      </div>
       <div
         class="card-container"
         cdkDropList
         (cdkDropListDropped)="drop($event, column)"
         [cdkDropListEnterPredicate]="predicateGenerator(column)"
       >
+        <div class="column-header" [innerHtml]="column.name">
+        </div>
         <app-card
           [id]="'card-' + card.id"
           *ngFor="let card of cards | statusfilter: column.status"
