--- a/alcs-frontend/src/app/features/application/intake/intake.component.html
+++ b/alcs-frontend/src/app/features/application/intake/intake.component.html
@@ -2,7 +2,7 @@
   <h3>ALC Intake</h3>
   <div>
     <div class="subheading2">Submitted to ALC</div>
-    <div style="margin: 12px 0">{{ dateReceived }}</div>
+    <div class="date-received">{{ dateReceived }}</div>
   </div>
   <div>
     <div class="subheading2">Paid</div>
