--- a/alcs-frontend/src/app/shared/inline-datepicker/inline-datepicker.component.scss
+++ b/alcs-frontend/src/app/shared/inline-datepicker/inline-datepicker.component.scss
@@ -5,3 +5,23 @@
 .editing.hidden {
   display: none;
 }
+
+.edit-button {
+  height: 24px;
+  width: 24px;
+}
+
+.edit-icon {
+  font-size: inherit;
+  line-height: 22px;
+}
+
+.button-container {
+  display: flex;
+  justify-content: flex-end;
+}
+
+.not-set {
+  color: #666;
+  font-style: italic;
+}
