--- a/alcs-frontend/src/styles/colors.scss
+++ b/alcs-frontend/src/styles/colors.scss
@@ -1,6 +1,11 @@
 $primary-color: #065a2f;
+$primary-color-dark: #002F17;
+$primary-color-light: #94C6AC;
+
 $secondary-color: #fcba19;
+
 $accent-color: #003366;
+
 $black: #313132;
 $white: #ffffff;
 $grey: #929292;
