--- a/alcs-frontend/src/app/features/application/application.component.scss
+++ b/alcs-frontend/src/app/features/application/application.component.scss
@@ -1,3 +1,5 @@
+@import '../../../styles/colors.scss';
+
 .layout {
   display: flex;
   flex-direction: row;
@@ -11,4 +13,30 @@
 
 .child-content {
   margin: 12px 0;
+}
+
+.nav {
+  width: 250px;
+  border-right: 1px solid;
+  height: 100%;
+}
+
+.section {
+  cursor: pointer;
+  border-bottom: 1px solid;
+
+  div {
+    padding: 12px;
+  }
+
+  div.active {
+    font-weight: bold;
+    color: #fff;
+    background-color: $primary-color-dark;
+  }
+
+  div:hover {
+    color: #000;
+    background-color: $primary-color-light;
+  }
 }
